Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-46487

PathView. DelegateModel::item: index out range error when model is reset with less number of items

    XMLWordPrintable

Details

    • b31bfde4b (dev), 61247583d (6.7), 59a3bfa1c (tqtc/lts-6.5)

    Description

      See attachment for an example.

      When model is reset with less number of items (hit left arrow key) there's no items on path as a result and the console output is as follows:

      DelegateModel::item: index out range -1 3
      qml: count: 3
      DelegateModel::item: index out range -1 3
      

      This happens when currentIndex is initially set to some non-zero value.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            kagro Kaj Grönholm
            dvolosnykh Dmitry Volosnykh
            Votes:
            5 Vote for this issue
            Watchers:
            10 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes