Make sure PathView index isn't negative when filling the model

Pick-to: 6.5
Fixes: QTBUG-46487
Change-Id: Iba2a875756f0c06b86bb0a0aaf66eac329b2382b
Reviewed-by: Santhosh Kumar <santhosh.kumar.selvaraj@qt.io>
(cherry picked from commit b31bfde4bd840a94cdd4b2223e8f7c345850bd66)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>